[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/game_leaderboard.gd" type="Script" id=1]

[node name="game_leaderboard" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTP_add" type="HTTPRequest" parent="."]

[node name="HTTP_get" type="HTTPRequest" parent="."]

[node name="score" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Timer" type="Timer" parent="."]

[connection signal="request_completed" from="HTTP_add" to="." method="_on_HTTP_add_request_completed"]
[connection signal="request_completed" from="HTTP_get" to="." method="_on_HTTP_get_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
